src/test/ui/closures/2229_closure_analysis/arrays-completely-captured.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/arrays-completely-captured.rs:8:17
   |
LL |     let mut c = #[rustc_capture_analysis]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error: First Pass analysis includes:
  --> $DIR/arrays-completely-captured.rs:11:5
   |
LL | /     || {
LL | |
LL | |
LL | |         m[0] += 10;
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Capturing m[] -> MutBorrow
  --> $DIR/arrays-completely-captured.rs:14:9
   |
LL |         m[0] += 10;
   |         ^
note: Capturing m[] -> MutBorrow
  --> $DIR/arrays-completely-captured.rs:17:9
   |
LL |         m[1] += 40;
   |         ^

error: Min Capture analysis includes:
  --> $DIR/arrays-completely-captured.rs:11:5
   |
LL | /     || {
LL | |
LL | |
LL | |         m[0] += 10;
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Min Capture m[] -> MutBorrow
  --> $DIR/arrays-completely-captured.rs:14:9
   |
LL |         m[0] += 10;
   |         ^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
